--- a/settings.json
+++ b/settings.json
@@ -4,14 +4,16 @@
     "masks": [
         {
             "name": "yellow spot, synth noise",
-            "rgb_value": [100,70,30],
-            "rgb_spread": 20,
+            "enable": 1,
+            "rgb_value": "5c0d0f",
+            "rgb_spread": 10,
             "midi_channel" : 1,
             "midi_note": 58
         },
         {
             "name": "red edges",
-            "rgb_value": [129,47,12],
+            "enable": 0,
+            "rgb_value": "5c0d0f",
             "rgb_spread": 10,
             "midi_channel" : 2,
             "midi_note": 30
